[package]
name = "conio_rs"
version = "0.1.2"
edition = "2021"
authors = ["Overtime Coder"]
description = "Wrapper to Windows conio API."
license = "MIT"
repository = "https://github.com/OvertimeCoder/conio-rs"
readme = "README.md"
categories = ["Command line utilities","API bindings"]
keywords = ["conio","console","api"]

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
